--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "fmentor-article-preview-react-styled-components",
-	"version": "0.1.0",
 	"private": true,
+	"version": "0.1.0",
+	"type": "module",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
